--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
