--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,12 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { "src": "*.js", "use": "@vercel/node" }
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "client/build"
+      }
+    }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest":"/"
+      "dest": "/client/build/$1"
     }
   ]
 }
