--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,7 +12,10 @@
         "dest": "./index.js",
         "methods": ["GET", "POST", "PUT", "DELETE"],
         "headers": {
-          "Access-Control-Allow-Origin": "https://treetrader.vercel.app"
+            "Access-Control-Allow-Origin": "https://treetrader.vercel.app",
+            "Access-Control-Allow-Methods": ["GET", "POST", "PUT", "DELETE"],
+            "Access-Control-Allow-Headers": "Content-Type, Authorization",
+            "Access-Control-Allow-Credentials": "true"
         }
     }
   ]
