--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,12 +11,17 @@
         "src": "/(.*)",
         "dest": "./index.js",
         "methods": ["GET", "POST", "PUT", "DELETE"],
-        "headers": {
-            "Access-Control-Allow-Origin": "https://treetrader.vercel.app",
-            "Access-Control-Allow-Methods": ["GET", "POST", "PUT", "DELETE"],
-            "Access-Control-Allow-Headers": "Content-Type, Authorization",
-            "Access-Control-Allow-Credentials": "true"
-        }
+        "headers": [
+            {
+              "source": "/(.*)",
+              "headers": [
+                { "key": "Access-Control-Allow-Credentials", "value": "true" },
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET,DELETE,POST,PUT" },
+                { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+              ]
+            }
+          ]
     }
   ]
 }
