--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,7 +6,7 @@
             "dest": "./index.js",
             "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
-            { "key": "Access-Control-Allow-Origin", "value": "*" },
+            { "key": "Access-Control-Allow-Origin", "value": "https://treetrader.vercel.app" },
             { "key": "Access-Control-Allow-Methods", "value": "GET,DELETE,POST,PUT" },
             { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
             ]
