--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       {
-         "src": "/(.*)",
+         "src": "https://treetrader.vercel.app",
          "dest": "/",
           "methods": ["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
           "headers": {
