--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
