--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,9 @@
 {
   "routes": [
     {
-    "src": "/.*",
-    "dest": "/index.js"
+      "src": "/.*",
+      "dest": "index.js",
+      "use": "@vercel/node"
     }
   ],
   "headers": [
