--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,7 +10,7 @@
       "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "false" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://treetrader.vercel.app/" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://treetrader.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
       ]
